# SSProjekat

./: CMakeLists.txt  README.md  compile.sh  emul.sh
inc/: assembler.h  emulator.h  linker.h  literalTable.h  relocationTable.h  sectionTable.h  symbolTable.h  syntaxCheck.h
inc/linker/: linker.h
src/: assembler.cpp  emulator.cpp  linker.cpp  literalTable.cpp  main.cpp  mainAssembler.cpp  mainEmulator.cpp  mainLinker.cpp  relocationTable.cpp  sectionTable.cpp  symbolTable.cpp  syntaxCheck.cpp
src/linker/: linker.cpp
test/: main.s
